<resources>
    <string name="app_name">Demo DatabaseCRUD</string>
    <string name="tvContent">Enter data to be inserted here:</string>
    <string name="insert">INSERT</string>
    <string name="edit">EDIT</string>
    <string name="retrieve">RETRIEVE</string>
    <string name="tvID">ID:</string>
    <string name="tvEC">Content:</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
</resources>